# moose

./: .gitignore  CMakeLists.txt  CppProperties.json
src/: CMakeLists.txt  main.cpp
src/kernel/: CMakeLists.txt  Kernel.cpp  Kernel.hpp
src/kernel/memory/: DefaultHeap.hpp  Heap.cpp  Heap.hpp  KernelHeap.cpp  KernelHeap.hpp  KernelNew.cpp  StlAllocator.hpp
src/kernel/memory/arch/posix/: PosixHeap.cpp  PosixHeap.hpp
src/kernel/service/: ServiceManager.h
src/services/: Service.hpp
